# sequence-unreal

./: .gitattributes  .gitignore  CODEOWNERS  Makefile  README.md  SequenceUnreal.uproject  SequenceUnrealPlugin.uplugin
.github/: pull_request_template.md
.github/workflows/: validate-pr-template.yml
Binaries/Mac/: UnrealEditor-SequenceUnrealPlugin.dylib  UnrealEditor.modules
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini  DefaultSequencePlugin.ini  DefaultSequenceUnrealPlugin.ini  SequenceConfig-bad.ini  SequenceConfig.ini  SequenceConfig_Bad.ini
Content/: BP_DowngradeTester.uasset  Main.umap
Content/Imported_Images/: Border_Hi_2.uasset  Button_Large_Hi.uasset  Tactic_Banner_DT.uasset  Tactic_Banner_DT_Hi.uasset  Team_Tactics_Banner.uasset
Content/Sequence/: GM_SequenceUnreal.uasset  Main.umap  NativeEpicAuth.uasset  Pawn_SequenceUnreal.uasset
Plugins/SequencePlugin/: README.md  SequencePlugin.uplugin
Plugins/SequencePlugin/Source/SequencePlugin/Public/EthAbi/: .gitignore  Cargo.toml  EthAbiBridge.cpp  EthAbiBridge.h  README.md  lib.rs
Plugins/SequencePlugin/Source/SequencePlugin/Public/EthAbi/windows/: libethabi_bridge.lib
Plugins/SequenceTests/: SequenceTests.uplugin
Plugins/secp256k1/: secp256k1.uplugin
Source/: SequenceUnreal.Target.cs  SequenceUnrealEditor.Target.cs
Source/SequenceUnreal/: DowngradeTester.cpp  DowngradeTester.h  SequenceUnreal.Build.cs  SequenceUnreal.cpp  SequenceUnreal.h  SequenceUnrealGameModeBase.cpp  SequenceUnrealGameModeBase.h  (+2 more)
testchain/: hardhat.config.js  package-lock.json  package.json
(+2224 files in other folders)
