[package]
name = "ethabi_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
cxx = "1.0"
ethabi = "16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
libc = "0.2"
